src/main/java/com/example/springhub/error/NoPublisherFoundException.java
package com.example.springhub.error;

public class NoPublisherFoundException extends Exception{

    public NoPublisherFoundException(String message){
        super(message);
    }
}
